--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,10 +53,10 @@ td {
 
 @media (max-width: 768px) {
   .content-area {
-    width: calc(100% - 60px);
+    width: 100%;
   }
   #sidebar {
-    width: 47px;
+    width: 0px;
     height: 100vh;
   }
 }
